# square-ox

./: .gitignore  Cargo.toml  README.md
examples/: bookings_api.rs  payments_api.rs  payments_api_sca.rs
src/: client.rs  endpoint.rs  error.rs  lib.rs  money.rs  response.rs
src/api/: bookings.rs  cards.rs  catalog.rs  checkout.rs  customers.rs  inventory.rs  locations.rs  mod.rs  orders.rs  payment.rs  sites.rs  terminal.rs
src/builder/: implementations.rs  mod.rs
src/endpoint/: bookings.rs  catalog.rs  customers.rs  locations.rs  mod.rs  payment.rs
src/errors/: mod.rs
src/objects/: enums.rs  maps.rs  mod.rs
tests/: integration_tests.rs
