[package]
name = "square-ox"
version = "0.1.0"
authors = ["Emil Hofstetter <emil.k.hofstetter@gmail.com>"]
edition = "2018"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/emilHof/square-ox"
categories = ["api-bindings", "asynchronous", "web-programming::http-client"]
keywords = ["square", "finance", "payment", "card-processing"]
description = "An easy, idiomatic, and flexible way of interacting with the Square API, following Rust conventions."
exclude = [
    "examples/**/*",
    ".env",
    ".idea/**",
    "oxidized-sqaure.md"
]



[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.10.0", features = ["blocking", "json"] }
serde_json = "1.0.81"
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
tokio = { version = "0.2.9", features = ["macros"] }
square-ox = {path = "../square-ox" }
actix-web = "3"
serde = { version = "1", features = ["derive"] }
actix-cors = "0.5.0"
actix-files = "0.5.0"
log = "0.4.14"
env_logger = "0.8.3"
dotenv = "0.15.0"